# cofi

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Fortran_notebook_exampe_rfc.ipynb  LICENCE  LICENSE  MANIFEST.in  NOTES.md  README.md  environment.yml  environment_dev.yml  environment_ref.yml  environment_test.yml  main.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE
.github/PULL_REQUEST_TEMPLATE/: cofi_core.md  docs.md  new_tool.md  others.md
.github/workflows/: build_wheels.yml  code_cov.yml  dispatch.yml  publish_pypi.yml  routine_submodule_update.yml  test.yml
CoFI/cofi_core/: inverse.py  model.py
CoFI/cofi_inverse/: base_inverser.py
cofi/: __init__.py  _version.py  base_forward.py  base_objective.py  base_problem.py  base_solver.py  inversion.py  inversion_options.py  model_params.py  runner.py
cofi/cofi_forward/: __init__.py  base.py  base_forward.py  base_objective.py  inverse.py  model.py  model_params.py
cofi/cofi_inverse/: __init__.py  base_inverse.py  base_inverser.py
cofi/cofi_objective/: README.md  __init__.py  bandit_multi_armed.py  base_forward.py  base_objective.py  exponential_decay.py  model_params.py  rfc.py  xrt.py
cofi/cofi_solvers/: README.md  __init__.py  base_inverse.py  base_solver.py
cofi/cofi_solvers/linear_regression/: CMakeLists.txt  __init__.py  _c_solver.pxd  _c_solver.pyx  _cpp_solver.py  _f77_solver.py  _f90_solver.py  _inverse.py  _python_solver.py  _solver.py  _utils.py
cofi/cofi_solvers/linear_regression/lib/: CMakeLists.txt  _c_solver.c  _c_solver_lib.c  _c_solver_lib.h  _cpp_solver_lib.cpp  _f77_solver_lib.f  _f90_solver_lib.f90
cofi/cofi_solvers/linear_regression/tests/: test.py
cofi/inv_problems/: __init__.py  base_forward.py  polynomial.py  polynomial_fwd.py  rfc.py
cofi/linear_reg/: CMakeLists.txt  _c_solver.c  _c_solver.pyx  _cpp_solver.py  _f77_solver.py  _f90_solver.py  _python_solver.py  _utils.py
cofi/linear_reg/lib/: CMakeLists.txt
cofi/optimisers/: __init__.py  _grad_descent.py  _petsc_tao.py  _scipy_optimiser.py
cofi/optimizers/: __init__.py  _petsc_tao.py  _scipy_optimizer.py
cofi/samplers/: __init__.py  _rjmcmc.py
cofi/solvers/: __init__.py  base_solver.py  numpy_lstsq.py  scipy_lstsq.py  scipy_opt.py  scipy_opt_lstsq.py  scipy_opt_min.py
cofi/tests/: test_base_problem.py  test_base_solver.py  test_inversion.py  test_inversion_options.py  test_inversion_runner.py  test_linear_reg.py  test_scipy.py  test_tao.py  test_tao_mpi.py
cofi/utils/: __init__.py
cofi_core/: __init__.py  inverse.py  main.py  model.py
cofi_forward/: rf.py  rf_cofi.yml
cofi_toberemoved/: __init__.py  _version.py  base_forward.py  base_solver.py  model_params.py
cofi_toberemoved/cofi_objective/: bandit_multi_armed.py  lib_rf.py
cofi_toberemoved/cofi_objective/lib_rfc/: CMakeLists.txt  rf_plot.py
cofi_toberemoved/cofi_objective/lib_rfc/RFsubs/: four1.f  voro2qmodel.f90
cofi_toberemoved/linear_reg/: __init__.py  _c_solver.pyx  _f77_solver.py  _python_solver.py
cofi_toberemoved/tests/: test_base_solver.py  test_linear_reg.py
doc/: Makefile  README.md  conf.py  environment.yml  faq.rst  getting-started.rst  index.rst  requirements.txt
doc/_static/: default.css  pygments.css  style.css
doc/api/: cofi.cofi_objective.examples.rst  cofi.cofi_objective.rst  cofi.linear_reg.rst  cofi.optimisers.rst  cofi.optimizers.rst  cofi.rst  cofi.utils.rst  cofi_objective.examples.rst  cofi_objective.rst  cofi_solvers.linear_regression.rst  cofi_solvers.rjmcmc.rst  cofi_solvers.rst  index.rst  modules.rst
doc/notebooks/: 1_basic_concepts.ipynb  2_cofi_example_linear_reg.ipynb  3_cofi_example_xrt.ipynb  4_cofi_example_rfc.ipynb  README.md  index.rst
docs/: Makefile  README.md  conf.py  contribute.rst  environment.yml  faq.rst  index.rst  installation.rst  introduction.rst  licence.rst  license.rst  requirements.txt  tutorial.rst
docs/_ext/: gen_gallery_scripts.py
docs/_static/: style.css
docs/api/: index.rst
docs/notebooks/: 4_cofi_example_rfc.ipynb  index.rst
docs/source/: README.md  conf.py  contribute.rst  faq.rst  index.rst  installation.rst  introduction.rst  licence.rst  roadmap.md  sg_execution_times.rst
docs/tutorials/: 1_basic_example_optimiser.ipynb  1_basic_example_optimizer.ipynb  2_basic_example_linear_lsq.ipynb  3_basic_example_sampler.ipynb  4_realworld_example.ipynb  5_another_realworld_example.ipynb  6_own_solver.ipynb  index.rst
envs/: environment.yml  environment_dev.yml  environment_test.yml  requirements_dev.txt  requirements_test.txt
examples/: Fortran_yaml_exampe_rfc.ipynb  python_notebook_exampe_rosenbrock.ipynb  yaml_testing.ipynb
examples/jupyter_examples_from_malcolm/: Notes.txt
legacy/: Dockerfile  docker.run.cmd  main.py
legacy/examples/: Fortran_notebook_exampe_rfc.ipynb  Fortran_yaml_exampe_rfc.ipynb
legacy/user_testing/: rosenbrock.py
src/cofi/: CMakeLists.txt  __init__.py  _base_problem.py  _exceptions.py  _inversion.py  _inversion_options.py  _version.py  base_problem.py  exceptions.py  inversion.py  inversion_options.py  version.py
tests/: test_base_problem.py  test_base_problem_basics.py  test_base_problem_for_optimization.py  test_base_problem_for_sampling.py  test_base_problem_misc.py  test_deprecation.py  test_inversion.py  test_inversion_options.py  test_inversion_result.py
tests/cofi_solvers/: test_all_solvers.py  test_base_solver.py  test_cofi_simple_newton.py  test_emcee.py  test_pytorch_optim.py  test_scipy_least_sq.py  test_scipy_lstsq.py  test_scipy_opt_min.py
tests/cofi_tools/: _template.py  test_all_tools.py  test_base_inf_tool.py  test_bayes_bay.py  test_bayes_bridge.py  test_cofi_border_collie_optimization.py  test_cofi_simple_newton.py  test_emcee.py  test_neighpy.py  test_pytorch_optim.py  test_scipy_lstsq.py  test_scipy_opt_lstsq.py  test_scipy_opt_min.py  test_scipy_sparse_lstsq.py
tools/: new_inference_tool.py  pre-commit
user_testing/: Forward_example_1_rfi.ipynb  rfc_example.yml  rosenbrock.py  rosenbrock_example.yml
(+643 files in other folders)
