# --------------------------- BEGIN NOTES ---------------------------

####### TO BUILD #######
# for users: python -m build
# for developers: rm -rf _skbuild; pip uninstall -y cofi; pip install -e .

####### TO TEST WHEELS ######
# export CIBW_SKIP='pp*'; rm -rf _skbuild; find . -type f -name "*.so" -exec rm {} \; ; cibuildwheel --platform linux

####### TO FORMAT #######
# black --check .
# black .

####### TO TEST #######
# pytest

####### COVERAGE #######
# coverage run -m pytest
# coverage report

####### PYLINT #######
# pylint cofi

# --------------------------- END NOTES ---------------------------


[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "scikit-build>=0.12",
  "cmake>=3.18",
  "ninja",
  "cython>=0.29.27",
  "numpy>=1.22.2",
  "pybind11[global]>=2.9.1",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["cofi/tests", "cofi/cofi_objective/tests"]
filterwarnings = "ignore:.*invalid escape sequence.*:DeprecationWarning"

[tool.coverage.run]
omit = ["*/lib*/*", "*/lib*", "cofi/cofi_objective/examples/bandit_multi_armed.py"]

[tool.black]
line-length = 88
target_version = ['py38']
experimental_string_processing = true
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.vscode
    | build
    | lib.*
    | dist
    | _skbuild
  )/
  | examples\/lib.*\.py 
)
'''