# pip install -e ".[autograd]"
# pip install "cofi[autograd]"

[metadata]
name = cofi
version = 0.1.0
author = InLab
# home-page = (WIP)
description = Common Framework for Inference
long_description = file: README.md
# license = (yet to decide)
# keywords = inversion, inference, python package, geoscience, geophysics
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
install_requires =
    numpy
    pyyaml


# [options.entry_points]

[options.packages.find]
exclude =
    tests
    tests.utils

[options.extras_require]
# automatic differentiation (getting jacobian / hessian without implementation)
autograd =
    jax
    jaxlib
# all features
all =
    %(autograd)s
# test dependencies
# test =
#     contexter ~=0.1
#     mock ~=2.0 ; python_version < '3.4'
#     parameterized ~=0.6
#     green ~=2.12
#     %(autograd)s
# coverage dependencies
# coverage =
#     coverage
#     codecov
#     codacy-coverage
# documentation dependencies
doc =
    sphinx ~=1.7
    sphinx-insipid-theme ~=0.6
    # semantic-version ~=2.6
# development dependencies
dev =
    docutils
    Pygments
    # %(test)s
    # %(coverage)s
