# pip install -e ".[autograd]"
# pip install "cofi[autograd]"

# rm -rf dist; python setup.py bdist_wheel
# twine upload --repository testpypi dist/*
# pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple cofi

[metadata]
name = cofi
version = attr: cofi.__version__
author = InLab
# home-page = (WIP)
description = Common Framework for Inference
long_description = file: README.md
long_description_content_type = text/markdown
# license = (yet to decide)
keywords = inversion, inference, python package, geoscience, geophysics
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C
    Programming Language :: Fortran
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.8
install_requires =
    numpy>=1.22.2
    scipy>=1.8.0
    pyyaml>=6.0


# [options.entry_points]

[options.packages.find]
exclude =
    tests
    tests.utils

[options.extras_require]
# automatic differentiation (getting jacobian / hessian without implementation)
# autograd =
#     jax
#     jaxlib
petsc =
    petsc4py
# all features
all =
    %(petsc)s
# test dependencies
test =
    pytest
    matplotlib
# coverage dependencies
coverage =
    coverage[toml]
# documentation dependencies
doc =
    sphinx ~=1.7
    sphinx-insipid-theme ~=0.6
# development dependencies
dev =
    black
    sphinx
    cython
    pybind11[global]
    scikit-build
    cibuildwheel
    %(doc)s
    %(test)s
    %(coverage)s
